versions/v4.2.0/doxygen/html/esp32c2-pinctrl_8h_source.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/esp32c2-pinctrl_8h_source.html
original_path: doxygen/html/esp32c2-pinctrl_8h_source.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

esp32c2-pinctrl.h

[Go to the documentation of this file.](esp32c2-pinctrl_8h.md)

1/\*

2 \* Copyright (c) 2024-2025 Espressif Systems (Shanghai) Co., Ltd.

3 \*

4 \* SPDX-License-Identifier: Apache-2.0

5 \*

6 \* NOTE: Autogenerated file using esp\_genpinctrl.py

7 \*/

8

9#ifndef ZEPHYR\_INCLUDE\_DT\_BINDINGS\_PINCTRL\_ESP32C2\_PINCTRL\_H\_

10#define ZEPHYR\_INCLUDE\_DT\_BINDINGS\_PINCTRL\_ESP32C2\_PINCTRL\_H\_

11

12/\* I2C0\_SCL \*/

[ 13](esp32c2-pinctrl_8h.md#a49f9b34d6f8b8666d6579057a9e01cfe)#define I2C0\_SCL\_GPIO0 ESP32\_PINMUX(0, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

14

[ 15](esp32c2-pinctrl_8h.md#ad7867c2e0f104e72b808749a3be13b1e)#define I2C0\_SCL\_GPIO1 ESP32\_PINMUX(1, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

16

[ 17](esp32c2-pinctrl_8h.md#ad9e579c3209a24b0d955da1d9d00c86b)#define I2C0\_SCL\_GPIO2 ESP32\_PINMUX(2, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

18

[ 19](esp32c2-pinctrl_8h.md#a93b36eac8332d00eb7840fd7c1222acb)#define I2C0\_SCL\_GPIO3 ESP32\_PINMUX(3, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

20

[ 21](esp32c2-pinctrl_8h.md#ab47be7775c0aa3b3eafb5cb68448b6cd)#define I2C0\_SCL\_GPIO4 ESP32\_PINMUX(4, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

22

[ 23](esp32c2-pinctrl_8h.md#af646178c2e3940fb4245ef01b2c51a47)#define I2C0\_SCL\_GPIO5 ESP32\_PINMUX(5, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

24

[ 25](esp32c2-pinctrl_8h.md#ada314f6c1efc1c7f19cf41ead5bd2a6a)#define I2C0\_SCL\_GPIO6 ESP32\_PINMUX(6, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

26

[ 27](esp32c2-pinctrl_8h.md#a7afbb96210af70e5fc471ab5e1cc0e92)#define I2C0\_SCL\_GPIO7 ESP32\_PINMUX(7, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

28

[ 29](esp32c2-pinctrl_8h.md#a307b0cb116eda8d14e3a9404c3566af8)#define I2C0\_SCL\_GPIO8 ESP32\_PINMUX(8, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

30

[ 31](esp32c2-pinctrl_8h.md#a81abd7a8f286037ae78aeff2f55b121f)#define I2C0\_SCL\_GPIO9 ESP32\_PINMUX(9, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

32

[ 33](esp32c2-pinctrl_8h.md#a7b06cdb0e06fc6d5566aae4b3e52b0d4)#define I2C0\_SCL\_GPIO10 ESP32\_PINMUX(10, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

34

[ 35](esp32c2-pinctrl_8h.md#ad01037f09242da09e7cd69a12f56c977)#define I2C0\_SCL\_GPIO18 ESP32\_PINMUX(18, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

36

[ 37](esp32c2-pinctrl_8h.md#ad5262ad86229447631716ba08f93a601)#define I2C0\_SCL\_GPIO19 ESP32\_PINMUX(19, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

38

[ 39](esp32c2-pinctrl_8h.md#aae6e75f4ea3ace38e93fbf062c01e015)#define I2C0\_SCL\_GPIO20 ESP32\_PINMUX(20, ESP\_I2CEXT0\_SCL\_IN, ESP\_I2CEXT0\_SCL\_OUT)

40

41/\* I2C0\_SDA \*/

[ 42](esp32c2-pinctrl_8h.md#ad7ff6aa92e0c1e836934a4e24c07451c)#define I2C0\_SDA\_GPIO0 ESP32\_PINMUX(0, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

43

[ 44](esp32c2-pinctrl_8h.md#a4661d13384900270aa37972185a29f8e)#define I2C0\_SDA\_GPIO1 ESP32\_PINMUX(1, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

45

[ 46](esp32c2-pinctrl_8h.md#a9e32ed81cf02a29236c508998bfef44b)#define I2C0\_SDA\_GPIO2 ESP32\_PINMUX(2, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

47

[ 48](esp32c2-pinctrl_8h.md#ab1fdc09b28bc1ed412c22e742c55bad7)#define I2C0\_SDA\_GPIO3 ESP32\_PINMUX(3, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

49

[ 50](esp32c2-pinctrl_8h.md#a55f6ae89ae8a05b5d89366528c0b932f)#define I2C0\_SDA\_GPIO4 ESP32\_PINMUX(4, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

51

[ 52](esp32c2-pinctrl_8h.md#a3c8a2b24740b362f61c25612a7df83f8)#define I2C0\_SDA\_GPIO5 ESP32\_PINMUX(5, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

53

[ 54](esp32c2-pinctrl_8h.md#ad7d3c9b07d5bcfa972dba33ed3e1b64a)#define I2C0\_SDA\_GPIO6 ESP32\_PINMUX(6, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

55

[ 56](esp32c2-pinctrl_8h.md#a7cfec75f0bd60b0f3a29b1ce3ab762bc)#define I2C0\_SDA\_GPIO7 ESP32\_PINMUX(7, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

57

[ 58](esp32c2-pinctrl_8h.md#adb49c4fbfeeecf0b68734b3070d3837a)#define I2C0\_SDA\_GPIO8 ESP32\_PINMUX(8, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

59

[ 60](esp32c2-pinctrl_8h.md#a76025f13d26a3418381e12615393779f)#define I2C0\_SDA\_GPIO9 ESP32\_PINMUX(9, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

61

[ 62](esp32c2-pinctrl_8h.md#ac9b2456944ebe2794b22c5da9b071695)#define I2C0\_SDA\_GPIO10 ESP32\_PINMUX(10, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

63

[ 64](esp32c2-pinctrl_8h.md#aff66e3ecfe8f499a1fcbe0c71652fdac)#define I2C0\_SDA\_GPIO18 ESP32\_PINMUX(18, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

65

[ 66](esp32c2-pinctrl_8h.md#a0fec444c804010b4c959af39c41e84cb)#define I2C0\_SDA\_GPIO19 ESP32\_PINMUX(19, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

67

[ 68](esp32c2-pinctrl_8h.md#adb3cc62f928178c270bbc35a3a723c31)#define I2C0\_SDA\_GPIO20 ESP32\_PINMUX(20, ESP\_I2CEXT0\_SDA\_IN, ESP\_I2CEXT0\_SDA\_OUT)

69

70/\* LEDC\_CH0 \*/

[ 71](esp32c2-pinctrl_8h.md#a8e02eba16ce23daf43d7284ad6bdfabc)#define LEDC\_CH0\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

72

[ 73](esp32c2-pinctrl_8h.md#a4e9a072f98adc55405e259ea5e138fbf)#define LEDC\_CH0\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

74

[ 75](esp32c2-pinctrl_8h.md#a4908f1d80831cc8aede9ae468ca12b02)#define LEDC\_CH0\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

76

[ 77](esp32c2-pinctrl_8h.md#a3e2793bf55a52430e9e6f891cb33a87b)#define LEDC\_CH0\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

78

[ 79](esp32c2-pinctrl_8h.md#af33218145bc2657a0db62287eeed26e4)#define LEDC\_CH0\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

80

[ 81](esp32c2-pinctrl_8h.md#a91ad662591cb7a3af4cb3b5609dea8e4)#define LEDC\_CH0\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

82

[ 83](esp32c2-pinctrl_8h.md#af17885873cf9dadad0f486a186ab9479)#define LEDC\_CH0\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

84

[ 85](esp32c2-pinctrl_8h.md#ab3251fd4647c95322be6c9f0a89c4159)#define LEDC\_CH0\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

86

[ 87](esp32c2-pinctrl_8h.md#a01e5b1fc2e73b72678c30bc8aef3383c)#define LEDC\_CH0\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

88

[ 89](esp32c2-pinctrl_8h.md#a09283a2f9d9c9067cf1f991e0968fd2f)#define LEDC\_CH0\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

90

[ 91](esp32c2-pinctrl_8h.md#ad205a40eaf7b3a3a3112ea1473808f3e)#define LEDC\_CH0\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

92

[ 93](esp32c2-pinctrl_8h.md#ab14c473906d635fcb4f5137f1bc5a94c)#define LEDC\_CH0\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

94

[ 95](esp32c2-pinctrl_8h.md#aa292f6143c098abc0b955242843e610e)#define LEDC\_CH0\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

96

[ 97](esp32c2-pinctrl_8h.md#a2a68245ef3511d5e135a37ba118be1a9)#define LEDC\_CH0\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT0)

98

99/\* LEDC\_CH1 \*/

[ 100](esp32c2-pinctrl_8h.md#a0e54e24c173b209250c7d5c4c867099a)#define LEDC\_CH1\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

101

[ 102](esp32c2-pinctrl_8h.md#a5ab582ee83df0e5d3b2ed5af3af30227)#define LEDC\_CH1\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

103

[ 104](esp32c2-pinctrl_8h.md#a0752518a6b6a3bc2e8e17d2a5b72c5db)#define LEDC\_CH1\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

105

[ 106](esp32c2-pinctrl_8h.md#abdd39910d39333252211056fe50b7a21)#define LEDC\_CH1\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

107

[ 108](esp32c2-pinctrl_8h.md#a1b9c6db80dc1f18e30cac146c6200e17)#define LEDC\_CH1\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

109

[ 110](esp32c2-pinctrl_8h.md#abecd9c20a68bb9ef1c88a78218b950ec)#define LEDC\_CH1\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

111

[ 112](esp32c2-pinctrl_8h.md#a1fe430021496d334050d59ee699b8a0e)#define LEDC\_CH1\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

113

[ 114](esp32c2-pinctrl_8h.md#af4864c3ee8b984f023cc91f55cb977a7)#define LEDC\_CH1\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

115

[ 116](esp32c2-pinctrl_8h.md#a65e9a67b4be6e6b2f5ff86f4ce636839)#define LEDC\_CH1\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

117

[ 118](esp32c2-pinctrl_8h.md#a9c4686c9bd3aadb2e08d6b76f0f94bda)#define LEDC\_CH1\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

119

[ 120](esp32c2-pinctrl_8h.md#ab842b3fa82cf580a7895cdd4aa53df3f)#define LEDC\_CH1\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

121

[ 122](esp32c2-pinctrl_8h.md#acc1400d6736e71f4a4daec5f68758bbd)#define LEDC\_CH1\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

123

[ 124](esp32c2-pinctrl_8h.md#a58d9e3ef8bd7ccf0e1c58020b8609804)#define LEDC\_CH1\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

125

[ 126](esp32c2-pinctrl_8h.md#a9eb6dadfccee53fc1f22f4503a9651f6)#define LEDC\_CH1\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT1)

127

128/\* LEDC\_CH2 \*/

[ 129](esp32c2-pinctrl_8h.md#a6af10a44732540398ebd55385a98082c)#define LEDC\_CH2\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

130

[ 131](esp32c2-pinctrl_8h.md#a9f5bce018f537180241134a923e40281)#define LEDC\_CH2\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

132

[ 133](esp32c2-pinctrl_8h.md#af04521be48fb51a485e2092f9ac1427a)#define LEDC\_CH2\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

134

[ 135](esp32c2-pinctrl_8h.md#a1ebb6ef31b45614b7302d973d8e7c945)#define LEDC\_CH2\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

136

[ 137](esp32c2-pinctrl_8h.md#a2a6553c89277eaf36361a26b46a3993f)#define LEDC\_CH2\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

138

[ 139](esp32c2-pinctrl_8h.md#ac7a95c4bc7546707630083bc0ad7a5a5)#define LEDC\_CH2\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

140

[ 141](esp32c2-pinctrl_8h.md#abcafbca68ef20d74646ab913732b79bc)#define LEDC\_CH2\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

142

[ 143](esp32c2-pinctrl_8h.md#a2e6e64b8127dd2993fa0a8658f02243b)#define LEDC\_CH2\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

144

[ 145](esp32c2-pinctrl_8h.md#a171e61bc6c99b7d68ae60ba96f99a6d5)#define LEDC\_CH2\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

146

[ 147](esp32c2-pinctrl_8h.md#a9a82ac254828d7c9de9ac7395632a251)#define LEDC\_CH2\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

148

[ 149](esp32c2-pinctrl_8h.md#a25faff6d4d87f8cc2c761456174480da)#define LEDC\_CH2\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

150

[ 151](esp32c2-pinctrl_8h.md#aa3b6f111ec0594fa5a30d7cd894b6c72)#define LEDC\_CH2\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

152

[ 153](esp32c2-pinctrl_8h.md#a44ba5e4fd63158c7718da062f6ed2a22)#define LEDC\_CH2\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

154

[ 155](esp32c2-pinctrl_8h.md#afd12a716b5bb1a70afcac80841d80336)#define LEDC\_CH2\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT2)

156

157/\* LEDC\_CH3 \*/

[ 158](esp32c2-pinctrl_8h.md#a2165622bfa7b0639d2ebd9f6f0b2c2e8)#define LEDC\_CH3\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

159

[ 160](esp32c2-pinctrl_8h.md#a3a12fc93898900cca600a3d142e19ef8)#define LEDC\_CH3\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

161

[ 162](esp32c2-pinctrl_8h.md#ad66e9ccc44d0f22bd7250b9b6f51c689)#define LEDC\_CH3\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

163

[ 164](esp32c2-pinctrl_8h.md#a8a7c9dfb101001160f9e8cb8add83fb4)#define LEDC\_CH3\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

165

[ 166](esp32c2-pinctrl_8h.md#a596ebad55c6b05088912924e7aca79ec)#define LEDC\_CH3\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

167

[ 168](esp32c2-pinctrl_8h.md#a3a8f82bd786fcd54e6ab0ea93670ccdb)#define LEDC\_CH3\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

169

[ 170](esp32c2-pinctrl_8h.md#a324a341cd030aa2460c61d1f265d078f)#define LEDC\_CH3\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

171

[ 172](esp32c2-pinctrl_8h.md#ad3711dd9329293b7c2542e58e3b28ef2)#define LEDC\_CH3\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

173

[ 174](esp32c2-pinctrl_8h.md#a5320682eef4fd31853f65a942d8bb7d1)#define LEDC\_CH3\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

175

[ 176](esp32c2-pinctrl_8h.md#a72d596c2ecd246eb039597ae0fce70dc)#define LEDC\_CH3\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

177

[ 178](esp32c2-pinctrl_8h.md#a9857c1b97982ca27738713378fae0e76)#define LEDC\_CH3\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

179

[ 180](esp32c2-pinctrl_8h.md#ab89c19159f82dea40626c5ac1f394a78)#define LEDC\_CH3\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

181

[ 182](esp32c2-pinctrl_8h.md#aa5295150f0cdf40cce2429989e6d6aa0)#define LEDC\_CH3\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

183

[ 184](esp32c2-pinctrl_8h.md#aaab34996e365e2c307f6442a0b529b8b)#define LEDC\_CH3\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT3)

185

186/\* LEDC\_CH4 \*/

[ 187](esp32c2-pinctrl_8h.md#ac1b0d173c276ab4d835ea59bdcba827a)#define LEDC\_CH4\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

188

[ 189](esp32c2-pinctrl_8h.md#af63726d2167872b3cfd714a7c87e0d84)#define LEDC\_CH4\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

190

[ 191](esp32c2-pinctrl_8h.md#ae73ddf2f65b78509327ce5ae598765ec)#define LEDC\_CH4\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

192

[ 193](esp32c2-pinctrl_8h.md#a5f5c4d3af21eba2583f79644ac00afdb)#define LEDC\_CH4\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

194

[ 195](esp32c2-pinctrl_8h.md#a23f7f4a27ef460cc562355c5da99a4fb)#define LEDC\_CH4\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

196

[ 197](esp32c2-pinctrl_8h.md#ad61fdde870af8e25d7ced17d7d452d8e)#define LEDC\_CH4\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

198

[ 199](esp32c2-pinctrl_8h.md#a5d740fc06bc95195d1f2954e5daff9c5)#define LEDC\_CH4\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

200

[ 201](esp32c2-pinctrl_8h.md#a9a12b1965b84d0136e3608814d3b95c1)#define LEDC\_CH4\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

202

[ 203](esp32c2-pinctrl_8h.md#a0e6c2b58bfe5f5c81788d50cd6c26cc9)#define LEDC\_CH4\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

204

[ 205](esp32c2-pinctrl_8h.md#a8b2401f11855a3913695f871f42d8a18)#define LEDC\_CH4\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

206

[ 207](esp32c2-pinctrl_8h.md#a2818faff6493275afbb0b53a7ba0bec1)#define LEDC\_CH4\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

208

[ 209](esp32c2-pinctrl_8h.md#ab4cb9693f43d939c1eb82f0720657853)#define LEDC\_CH4\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

210

[ 211](esp32c2-pinctrl_8h.md#aad7abd4833238415c825fb7663864866)#define LEDC\_CH4\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

212

[ 213](esp32c2-pinctrl_8h.md#a8cceb5eb8a6899ac74b8aff2a5f55ba0)#define LEDC\_CH4\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT4)

214

215/\* LEDC\_CH5 \*/

[ 216](esp32c2-pinctrl_8h.md#a32e916e5fac62dbd38f1cbaebabe0ff8)#define LEDC\_CH5\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

217

[ 218](esp32c2-pinctrl_8h.md#a4c1c27f6cad90157c320db1723471f3b)#define LEDC\_CH5\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

219

[ 220](esp32c2-pinctrl_8h.md#a739750079a45d9dc0eecc48c41e74f31)#define LEDC\_CH5\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

221

[ 222](esp32c2-pinctrl_8h.md#a08890f41e8220a5b4292d25f2ec04a6c)#define LEDC\_CH5\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

223

[ 224](esp32c2-pinctrl_8h.md#a20f7e891d4cf2909bae723a366c5b4a9)#define LEDC\_CH5\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

225

[ 226](esp32c2-pinctrl_8h.md#a9feca8544e924db1d6ae84ffabb1906d)#define LEDC\_CH5\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

227

[ 228](esp32c2-pinctrl_8h.md#a6acbe809b814f3518b30d53427bcff68)#define LEDC\_CH5\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

229

[ 230](esp32c2-pinctrl_8h.md#a8c1a9c457020a25d7bb4f5c956bdc1c7)#define LEDC\_CH5\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

231

[ 232](esp32c2-pinctrl_8h.md#abd69d441c0707b37be42b888bd14c844)#define LEDC\_CH5\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

233

[ 234](esp32c2-pinctrl_8h.md#a0af365c7b5ea891b46d91dd42a169875)#define LEDC\_CH5\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

235

[ 236](esp32c2-pinctrl_8h.md#a579b668f921cda86c34968ac7f665e60)#define LEDC\_CH5\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

237

[ 238](esp32c2-pinctrl_8h.md#a7a650b10046991a4df4edc51ae5e5110)#define LEDC\_CH5\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

239

[ 240](esp32c2-pinctrl_8h.md#a834bd6af8169fe225f116f8f5e4f903e)#define LEDC\_CH5\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

241

[ 242](esp32c2-pinctrl_8h.md#ab0a7f1e0aae0eee364a63900e0b42459)#define LEDC\_CH5\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_LEDC\_LS\_SIG\_OUT5)

243

244/\* SPIM2\_CSEL \*/

[ 245](esp32c2-pinctrl_8h.md#ab34ff6107c1bc1b387ef86905a090018)#define SPIM2\_CSEL\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

246

[ 247](esp32c2-pinctrl_8h.md#ad9fc70a88c80c36c5b91a64e74f6fe6a)#define SPIM2\_CSEL\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

248

[ 249](esp32c2-pinctrl_8h.md#a731a0313e8c1f8ac35aa045acf19475b)#define SPIM2\_CSEL\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

250

[ 251](esp32c2-pinctrl_8h.md#aea465f06a285138aedcc26f3710f7c45)#define SPIM2\_CSEL\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

252

[ 253](esp32c2-pinctrl_8h.md#a132be3ce3a49344b274d835586bced10)#define SPIM2\_CSEL\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

254

[ 255](esp32c2-pinctrl_8h.md#ae8240b559b715b2ca2e6d62af428cee2)#define SPIM2\_CSEL\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

256

[ 257](esp32c2-pinctrl_8h.md#ad719a853c410a0371cc5e05694369b39)#define SPIM2\_CSEL\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

258

[ 259](esp32c2-pinctrl_8h.md#afdcb3f13ecdda8dc5d97155e9c78830a)#define SPIM2\_CSEL\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

260

[ 261](esp32c2-pinctrl_8h.md#a9b93391e46076ac48d978cd76d4923ad)#define SPIM2\_CSEL\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

262

[ 263](esp32c2-pinctrl_8h.md#a12803daf8d1fc96b418a4d07f94fd0da)#define SPIM2\_CSEL\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

264

[ 265](esp32c2-pinctrl_8h.md#a84a3b70e9dcaf4866521ac1c400175df)#define SPIM2\_CSEL\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

266

[ 267](esp32c2-pinctrl_8h.md#a606fcdc740fa4a9484efed4ed146df39)#define SPIM2\_CSEL\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

268

[ 269](esp32c2-pinctrl_8h.md#a6ce7b24ffad3ec2b0f48c4bfb35ec5ff)#define SPIM2\_CSEL\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

270

[ 271](esp32c2-pinctrl_8h.md#a6c877c8bec9a372baaa8c3a29ea644be)#define SPIM2\_CSEL\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_FSPICS0\_OUT)

272

273/\* SPIM2\_CSEL1 \*/

[ 274](esp32c2-pinctrl_8h.md#a55cc87f49ee90de6f972e1dc27e7f502)#define SPIM2\_CSEL1\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

275

[ 276](esp32c2-pinctrl_8h.md#a98f40b0121462a6db3ee95266f1ee634)#define SPIM2\_CSEL1\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

277

[ 278](esp32c2-pinctrl_8h.md#a71720370537d80f00c3e4d8875d73acd)#define SPIM2\_CSEL1\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

279

[ 280](esp32c2-pinctrl_8h.md#ad904d0a01f5d570e8df0874fa938767e)#define SPIM2\_CSEL1\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

281

[ 282](esp32c2-pinctrl_8h.md#a23e5f835c69b54e54fcd1e543028ad9f)#define SPIM2\_CSEL1\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

283

[ 284](esp32c2-pinctrl_8h.md#aa47f4d58d5b8473370a597ddb3d348aa)#define SPIM2\_CSEL1\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

285

[ 286](esp32c2-pinctrl_8h.md#a4f91f3f30b578a0b429c2d0a0a8bc689)#define SPIM2\_CSEL1\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

287

[ 288](esp32c2-pinctrl_8h.md#a6e5a37e3b27c3c37f101810cf07e8443)#define SPIM2\_CSEL1\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

289

[ 290](esp32c2-pinctrl_8h.md#a6c3e22ca3f27f34b75dcf0726db8a0a5)#define SPIM2\_CSEL1\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

291

[ 292](esp32c2-pinctrl_8h.md#a18719a0408005a9d00170419b16ba891)#define SPIM2\_CSEL1\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

293

[ 294](esp32c2-pinctrl_8h.md#a5f02ad9f8aecf7c0d30d1b731567049d)#define SPIM2\_CSEL1\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

295

[ 296](esp32c2-pinctrl_8h.md#afdeb970520496bef53d78e30c355a96e)#define SPIM2\_CSEL1\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

297

[ 298](esp32c2-pinctrl_8h.md#a65c10b11b35ed59d4896c4e0860dbcca)#define SPIM2\_CSEL1\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

299

[ 300](esp32c2-pinctrl_8h.md#a57c5003c35b1be71c9cab699c0ced91e)#define SPIM2\_CSEL1\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_FSPICS1\_OUT)

301

302/\* SPIM2\_CSEL2 \*/

[ 303](esp32c2-pinctrl_8h.md#a332b9129b0db8d070ca4052a3bc9b41b)#define SPIM2\_CSEL2\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

304

[ 305](esp32c2-pinctrl_8h.md#abd262713f0b8ccd91a1bf3e960692f53)#define SPIM2\_CSEL2\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

306

[ 307](esp32c2-pinctrl_8h.md#aded25f5a0842fbb77e25d687eb128ebc)#define SPIM2\_CSEL2\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

308

[ 309](esp32c2-pinctrl_8h.md#a47436b64f358b93bc601ec2291de195b)#define SPIM2\_CSEL2\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

310

[ 311](esp32c2-pinctrl_8h.md#a31390712cfb5762e7bc8c827844255be)#define SPIM2\_CSEL2\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

312

[ 313](esp32c2-pinctrl_8h.md#a2ad211f768539837010f934700384b5e)#define SPIM2\_CSEL2\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

314

[ 315](esp32c2-pinctrl_8h.md#a530f79a2cc980d2c9ecac5e9d5dae844)#define SPIM2\_CSEL2\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

316

[ 317](esp32c2-pinctrl_8h.md#aa0f6e6aee8c8276255618d468f581f36)#define SPIM2\_CSEL2\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

318

[ 319](esp32c2-pinctrl_8h.md#a3e5f7126a1bcc2d0560376fdfae34685)#define SPIM2\_CSEL2\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

320

[ 321](esp32c2-pinctrl_8h.md#a0e452a11644daef355c75f4bcb36aaf6)#define SPIM2\_CSEL2\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

322

[ 323](esp32c2-pinctrl_8h.md#a87d9f1c938b74a0d3a0e1f81b8ad2164)#define SPIM2\_CSEL2\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

324

[ 325](esp32c2-pinctrl_8h.md#a3e7ba600fff87389470239a302a9fde6)#define SPIM2\_CSEL2\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

326

[ 327](esp32c2-pinctrl_8h.md#a9c80c3e4b9cd6b9d3296038a25ef9a0c)#define SPIM2\_CSEL2\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

328

[ 329](esp32c2-pinctrl_8h.md#a7b0745a00f22ad1b60806a5afe0e04a4)#define SPIM2\_CSEL2\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_FSPICS2\_OUT)

330

331/\* SPIM2\_CSEL3 \*/

[ 332](esp32c2-pinctrl_8h.md#aecece9e03248c8de0c3cc1cdcb08d577)#define SPIM2\_CSEL3\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

333

[ 334](esp32c2-pinctrl_8h.md#a122459c2ef844c337577fe196ef080ce)#define SPIM2\_CSEL3\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

335

[ 336](esp32c2-pinctrl_8h.md#a6fc5523913fed741686a90b953bd49ad)#define SPIM2\_CSEL3\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

337

[ 338](esp32c2-pinctrl_8h.md#ad92cd4168a9a532f21a874d2f1ac5b54)#define SPIM2\_CSEL3\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

339

[ 340](esp32c2-pinctrl_8h.md#a3c26b526e64dc31fb54f8cad025d4197)#define SPIM2\_CSEL3\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

341

[ 342](esp32c2-pinctrl_8h.md#a54d89ede3c2eff39e792ab74ce230b2c)#define SPIM2\_CSEL3\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

343

[ 344](esp32c2-pinctrl_8h.md#ab03cf5c428d4a6a2db0a37abf6e5855d)#define SPIM2\_CSEL3\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

345

[ 346](esp32c2-pinctrl_8h.md#abcb5bc29c3fbdadadbccab6e0d61fe3e)#define SPIM2\_CSEL3\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

347

[ 348](esp32c2-pinctrl_8h.md#ae8f4940b19ce3c398b7396321a35ca96)#define SPIM2\_CSEL3\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

349

[ 350](esp32c2-pinctrl_8h.md#a5f30ecdabc637775acdadecc0cf6cff9)#define SPIM2\_CSEL3\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

351

[ 352](esp32c2-pinctrl_8h.md#ad84c585e7eaac32427ea5a50720f8d94)#define SPIM2\_CSEL3\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

353

[ 354](esp32c2-pinctrl_8h.md#a1aa2280d170dcad5c756cfb7c1f17e14)#define SPIM2\_CSEL3\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

355

[ 356](esp32c2-pinctrl_8h.md#adfbcf9519cc88e094111f1af04ed7c9c)#define SPIM2\_CSEL3\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

357

[ 358](esp32c2-pinctrl_8h.md#ababfb1005181bc09ecb74d22de81ac51)#define SPIM2\_CSEL3\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_FSPICS3\_OUT)

359

360/\* SPIM2\_CSEL4 \*/

[ 361](esp32c2-pinctrl_8h.md#a33849be2be9679fbfb2d2c1dfd75ef83)#define SPIM2\_CSEL4\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

362

[ 363](esp32c2-pinctrl_8h.md#a47ebd0327ec32db0143365f39f0a1b58)#define SPIM2\_CSEL4\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

364

[ 365](esp32c2-pinctrl_8h.md#acc779e32611f1e9d1604b607f7cc26d0)#define SPIM2\_CSEL4\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

366

[ 367](esp32c2-pinctrl_8h.md#a57c620fead77d87a716b84ac957fb3b9)#define SPIM2\_CSEL4\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

368

[ 369](esp32c2-pinctrl_8h.md#a77f4663c52f38d56061c666254d2adf9)#define SPIM2\_CSEL4\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

370

[ 371](esp32c2-pinctrl_8h.md#a5ea87e935a6eef9738d6b4246c6a0263)#define SPIM2\_CSEL4\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

372

[ 373](esp32c2-pinctrl_8h.md#a6f8421aee6639107ddcb4c530edce0d7)#define SPIM2\_CSEL4\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

374

[ 375](esp32c2-pinctrl_8h.md#a0e2bae08a9415c064f429752df12de03)#define SPIM2\_CSEL4\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

376

[ 377](esp32c2-pinctrl_8h.md#a35ce8d233eae6293abe8b498f66ad047)#define SPIM2\_CSEL4\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

378

[ 379](esp32c2-pinctrl_8h.md#a87335688b53aabe5cfbca405381c1c52)#define SPIM2\_CSEL4\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

380

[ 381](esp32c2-pinctrl_8h.md#a300d2788d0a71f13fa4e2098b9ddb2d2)#define SPIM2\_CSEL4\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

382

[ 383](esp32c2-pinctrl_8h.md#a1e7e2e861c4bf31c12e80f94cd788e5e)#define SPIM2\_CSEL4\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

384

[ 385](esp32c2-pinctrl_8h.md#ae89b3e8fcd0529f5f2fc3eeeccdb08a0)#define SPIM2\_CSEL4\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

386

[ 387](esp32c2-pinctrl_8h.md#a2dda3ceabea8b642d436c51bb9e83663)#define SPIM2\_CSEL4\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_FSPICS4\_OUT)

388

389/\* SPIM2\_CSEL5 \*/

[ 390](esp32c2-pinctrl_8h.md#a6f057c5243a0339103150d5c45306d4c)#define SPIM2\_CSEL5\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

391

[ 392](esp32c2-pinctrl_8h.md#ac41fa6f47ed9d9e19788786ce3a5a161)#define SPIM2\_CSEL5\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

393

[ 394](esp32c2-pinctrl_8h.md#ae9be6f7073336c4ddd40caea12b00fec)#define SPIM2\_CSEL5\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

395

[ 396](esp32c2-pinctrl_8h.md#a5d20c80ff6a7273e1bb7521603b47bbc)#define SPIM2\_CSEL5\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

397

[ 398](esp32c2-pinctrl_8h.md#ae4893594e861f384a306d06e29bf53d5)#define SPIM2\_CSEL5\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

399

[ 400](esp32c2-pinctrl_8h.md#ab5b38ca42c7a7ea41c46346b5bb3ddad)#define SPIM2\_CSEL5\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

401

[ 402](esp32c2-pinctrl_8h.md#a7bfa3e1b245368625ed09257522818e8)#define SPIM2\_CSEL5\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

403

[ 404](esp32c2-pinctrl_8h.md#a3134e015fcf24138d9ecf0edbc75dfd9)#define SPIM2\_CSEL5\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

405

[ 406](esp32c2-pinctrl_8h.md#a56dac5b6771ea62c12fd4932b4af2718)#define SPIM2\_CSEL5\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

407

[ 408](esp32c2-pinctrl_8h.md#a9d6406f08f1c6cf8de9a3f9d7f53de2c)#define SPIM2\_CSEL5\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

409

[ 410](esp32c2-pinctrl_8h.md#a69e2948305ec0b7b80325c27845002ff)#define SPIM2\_CSEL5\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

411

[ 412](esp32c2-pinctrl_8h.md#a5c460e68a42450d4d0ffe0c33a44f4eb)#define SPIM2\_CSEL5\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

413

[ 414](esp32c2-pinctrl_8h.md#a279564f19cea02c976d8834e0f121b1c)#define SPIM2\_CSEL5\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

415

[ 416](esp32c2-pinctrl_8h.md#a16262e7fdb5a9dffdf3b26feae96040a)#define SPIM2\_CSEL5\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_FSPICS5\_OUT)

417

418/\* SPIM2\_MISO \*/

[ 419](esp32c2-pinctrl_8h.md#acbd32edee81584fe0d766d477055c257)#define SPIM2\_MISO\_GPIO0 ESP32\_PINMUX(0, ESP\_FSPIQ\_IN, ESP\_NOSIG)

420

[ 421](esp32c2-pinctrl_8h.md#a4746b46476f83ce8d493dd0356ff85fd)#define SPIM2\_MISO\_GPIO1 ESP32\_PINMUX(1, ESP\_FSPIQ\_IN, ESP\_NOSIG)

422

[ 423](esp32c2-pinctrl_8h.md#a4374f39fa3420fd791725aaaa768cb7c)#define SPIM2\_MISO\_GPIO2 ESP32\_PINMUX(2, ESP\_FSPIQ\_IN, ESP\_NOSIG)

424

[ 425](esp32c2-pinctrl_8h.md#a06d45ade76134b4acbb7f880c1d46ac9)#define SPIM2\_MISO\_GPIO3 ESP32\_PINMUX(3, ESP\_FSPIQ\_IN, ESP\_NOSIG)

426

[ 427](esp32c2-pinctrl_8h.md#ab57231f7cd2854dfb14cf6d808776840)#define SPIM2\_MISO\_GPIO4 ESP32\_PINMUX(4, ESP\_FSPIQ\_IN, ESP\_NOSIG)

428

[ 429](esp32c2-pinctrl_8h.md#ad38133c0a646432a804002a23bff7a90)#define SPIM2\_MISO\_GPIO5 ESP32\_PINMUX(5, ESP\_FSPIQ\_IN, ESP\_NOSIG)

430

[ 431](esp32c2-pinctrl_8h.md#a937a2e9b2f123a65e0c52765f9400ccf)#define SPIM2\_MISO\_GPIO6 ESP32\_PINMUX(6, ESP\_FSPIQ\_IN, ESP\_NOSIG)

432

[ 433](esp32c2-pinctrl_8h.md#aaf9f2e427311d9a4652e8d47c93b26f5)#define SPIM2\_MISO\_GPIO7 ESP32\_PINMUX(7, ESP\_FSPIQ\_IN, ESP\_NOSIG)

434

[ 435](esp32c2-pinctrl_8h.md#a55397e11fc861e10ccdec3ef60ad00a2)#define SPIM2\_MISO\_GPIO8 ESP32\_PINMUX(8, ESP\_FSPIQ\_IN, ESP\_NOSIG)

436

[ 437](esp32c2-pinctrl_8h.md#a199e016eb705489fb7891654fc2267ca)#define SPIM2\_MISO\_GPIO9 ESP32\_PINMUX(9, ESP\_FSPIQ\_IN, ESP\_NOSIG)

438

[ 439](esp32c2-pinctrl_8h.md#a11310bc2c9962205589415728e08a80a)#define SPIM2\_MISO\_GPIO10 ESP32\_PINMUX(10, ESP\_FSPIQ\_IN, ESP\_NOSIG)

440

[ 441](esp32c2-pinctrl_8h.md#a89ecef1f732baddea2312f9886e99741)#define SPIM2\_MISO\_GPIO18 ESP32\_PINMUX(18, ESP\_FSPIQ\_IN, ESP\_NOSIG)

442

[ 443](esp32c2-pinctrl_8h.md#a3dd431bc0abe21bac1efad57d67080e9)#define SPIM2\_MISO\_GPIO19 ESP32\_PINMUX(19, ESP\_FSPIQ\_IN, ESP\_NOSIG)

444

[ 445](esp32c2-pinctrl_8h.md#a29c0e175f10550ecff80911931d8d02b)#define SPIM2\_MISO\_GPIO20 ESP32\_PINMUX(20, ESP\_FSPIQ\_IN, ESP\_NOSIG)

446

447/\* SPIM2\_MOSI \*/

[ 448](esp32c2-pinctrl_8h.md#a2b769ce8fcb7e9c7c5913317917e8fdc)#define SPIM2\_MOSI\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_FSPID\_OUT)

449

[ 450](esp32c2-pinctrl_8h.md#a832ce082384e9850c64d60fcefdb42a2)#define SPIM2\_MOSI\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_FSPID\_OUT)

451

[ 452](esp32c2-pinctrl_8h.md#a0a968551c2cab1293942615802923ae3)#define SPIM2\_MOSI\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_FSPID\_OUT)

453

[ 454](esp32c2-pinctrl_8h.md#a5e82da8ebe74e4b851f6ce810098cb05)#define SPIM2\_MOSI\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_FSPID\_OUT)

455

[ 456](esp32c2-pinctrl_8h.md#ac63c8b82ccb23296798a4a94887b0af5)#define SPIM2\_MOSI\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_FSPID\_OUT)

457

[ 458](esp32c2-pinctrl_8h.md#a0787b96bd1f1fa07b9b4ced2e7f8acad)#define SPIM2\_MOSI\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_FSPID\_OUT)

459

[ 460](esp32c2-pinctrl_8h.md#a257cfc2a1130749b0b1df82609a6db6d)#define SPIM2\_MOSI\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_FSPID\_OUT)

461

[ 462](esp32c2-pinctrl_8h.md#a46e40f7a40b11cc08a7ae9a0b156306a)#define SPIM2\_MOSI\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_FSPID\_OUT)

463

[ 464](esp32c2-pinctrl_8h.md#a83033bcb0994de112838d6c1585eeeac)#define SPIM2\_MOSI\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_FSPID\_OUT)

465

[ 466](esp32c2-pinctrl_8h.md#a9d072e841300df8362ab1abbeb77b650)#define SPIM2\_MOSI\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_FSPID\_OUT)

467

[ 468](esp32c2-pinctrl_8h.md#a8d2d2bb89e8e41b91d3dfa26f437df73)#define SPIM2\_MOSI\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_FSPID\_OUT)

469

[ 470](esp32c2-pinctrl_8h.md#a0a9c9fecb8bf5da0fc56a7ecfe41f0c9)#define SPIM2\_MOSI\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_FSPID\_OUT)

471

[ 472](esp32c2-pinctrl_8h.md#a5dc2aa4c89d44435f48d7fdbe0fd6571)#define SPIM2\_MOSI\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_FSPID\_OUT)

473

[ 474](esp32c2-pinctrl_8h.md#aa46aa14c4b48a218a66d3e32ddbaf29c)#define SPIM2\_MOSI\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_FSPID\_OUT)

475

476/\* SPIM2\_SCLK \*/

[ 477](esp32c2-pinctrl_8h.md#a3e1ba8ebb210e732e46b7fcdeb100df9)#define SPIM2\_SCLK\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

478

[ 479](esp32c2-pinctrl_8h.md#ae6cf849e2806f0ad309b613e0915498a)#define SPIM2\_SCLK\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

480

[ 481](esp32c2-pinctrl_8h.md#aa4f58f09cdb81913ee00bae08d6d5b13)#define SPIM2\_SCLK\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

482

[ 483](esp32c2-pinctrl_8h.md#a0ef173ea296e876aab22d0dd4a3b3eae)#define SPIM2\_SCLK\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

484

[ 485](esp32c2-pinctrl_8h.md#a0b1dad5ec01d050e685d46dcbcb51842)#define SPIM2\_SCLK\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

486

[ 487](esp32c2-pinctrl_8h.md#ac36d8d02c4d2a8e3e2969918fa5e6fe7)#define SPIM2\_SCLK\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

488

[ 489](esp32c2-pinctrl_8h.md#a079ae6f9617e07d2d6f3cd1660ab8dce)#define SPIM2\_SCLK\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

490

[ 491](esp32c2-pinctrl_8h.md#af9297fe35bff207abdc5d5cbf759266c)#define SPIM2\_SCLK\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

492

[ 493](esp32c2-pinctrl_8h.md#a752b26af4d8520104e6a36a6be20c560)#define SPIM2\_SCLK\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

494

[ 495](esp32c2-pinctrl_8h.md#a65999ebd64c4a734102e0aa239eb8c82)#define SPIM2\_SCLK\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

496

[ 497](esp32c2-pinctrl_8h.md#a7ad699348df23d0b01cfd34d0ef15e50)#define SPIM2\_SCLK\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

498

[ 499](esp32c2-pinctrl_8h.md#ab2fd7ccd987b722a7dce68849ed6ff4a)#define SPIM2\_SCLK\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

500

[ 501](esp32c2-pinctrl_8h.md#a96c7c2b16cfadda8cc26c5bacd4d5a31)#define SPIM2\_SCLK\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

502

[ 503](esp32c2-pinctrl_8h.md#ac3bd2c321da63856e4fcbc879f3334c2)#define SPIM2\_SCLK\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_FSPICLK\_OUT)

504

505/\* UART0\_CTS \*/

[ 506](esp32c2-pinctrl_8h.md#a13e14fb67d8858785b706697c43c584c)#define UART0\_CTS\_GPIO0 ESP32\_PINMUX(0, ESP\_U0CTS\_IN, ESP\_NOSIG)

507

[ 508](esp32c2-pinctrl_8h.md#a46e90685f06f9cb7274d32ddcbbe9ff1)#define UART0\_CTS\_GPIO1 ESP32\_PINMUX(1, ESP\_U0CTS\_IN, ESP\_NOSIG)

509

[ 510](esp32c2-pinctrl_8h.md#a2d9feefff979b425201f36aff1528a51)#define UART0\_CTS\_GPIO2 ESP32\_PINMUX(2, ESP\_U0CTS\_IN, ESP\_NOSIG)

511

[ 512](esp32c2-pinctrl_8h.md#aca2e5a7f9b03adb7fad4706acbb03317)#define UART0\_CTS\_GPIO3 ESP32\_PINMUX(3, ESP\_U0CTS\_IN, ESP\_NOSIG)

513

[ 514](esp32c2-pinctrl_8h.md#a41587cab2422b061378aee7ca061e3ca)#define UART0\_CTS\_GPIO4 ESP32\_PINMUX(4, ESP\_U0CTS\_IN, ESP\_NOSIG)

515

[ 516](esp32c2-pinctrl_8h.md#ae1bf0fa9daf15e2953de2d8d95da85ed)#define UART0\_CTS\_GPIO5 ESP32\_PINMUX(5, ESP\_U0CTS\_IN, ESP\_NOSIG)

517

[ 518](esp32c2-pinctrl_8h.md#a7f4e4bf2db4a758dd5a407885ab39261)#define UART0\_CTS\_GPIO6 ESP32\_PINMUX(6, ESP\_U0CTS\_IN, ESP\_NOSIG)

519

[ 520](esp32c2-pinctrl_8h.md#ae059c87d5d539ac2e7b70b0b95849c4b)#define UART0\_CTS\_GPIO7 ESP32\_PINMUX(7, ESP\_U0CTS\_IN, ESP\_NOSIG)

521

[ 522](esp32c2-pinctrl_8h.md#a96f54f0661d610306ab0aae3301473fb)#define UART0\_CTS\_GPIO8 ESP32\_PINMUX(8, ESP\_U0CTS\_IN, ESP\_NOSIG)

523

[ 524](esp32c2-pinctrl_8h.md#a3b6e111e0168b295e841c7f91b77f264)#define UART0\_CTS\_GPIO9 ESP32\_PINMUX(9, ESP\_U0CTS\_IN, ESP\_NOSIG)

525

[ 526](esp32c2-pinctrl_8h.md#a768f1f3779349a47f8c9a3b49d9feef4)#define UART0\_CTS\_GPIO10 ESP32\_PINMUX(10, ESP\_U0CTS\_IN, ESP\_NOSIG)

527

[ 528](esp32c2-pinctrl_8h.md#ac3d808591d2b3cc7c605d02803971366)#define UART0\_CTS\_GPIO18 ESP32\_PINMUX(18, ESP\_U0CTS\_IN, ESP\_NOSIG)

529

[ 530](esp32c2-pinctrl_8h.md#a4d36ac9cc0e072180efd7da6f7cfad34)#define UART0\_CTS\_GPIO19 ESP32\_PINMUX(19, ESP\_U0CTS\_IN, ESP\_NOSIG)

531

[ 532](esp32c2-pinctrl_8h.md#a73eb127595a735d0b072eb682f869e6c)#define UART0\_CTS\_GPIO20 ESP32\_PINMUX(20, ESP\_U0CTS\_IN, ESP\_NOSIG)

533

534/\* UART0\_DSR \*/

[ 535](esp32c2-pinctrl_8h.md#aadea41b0c107aabe664d81d0a84e1ebd)#define UART0\_DSR\_GPIO0 ESP32\_PINMUX(0, ESP\_U0DSR\_IN, ESP\_NOSIG)

536

[ 537](esp32c2-pinctrl_8h.md#acdc72fbb6817ee24424d069eb8532bda)#define UART0\_DSR\_GPIO1 ESP32\_PINMUX(1, ESP\_U0DSR\_IN, ESP\_NOSIG)

538

[ 539](esp32c2-pinctrl_8h.md#a7abb83eb0c90e3b552b84a7ea9ba6503)#define UART0\_DSR\_GPIO2 ESP32\_PINMUX(2, ESP\_U0DSR\_IN, ESP\_NOSIG)

540

[ 541](esp32c2-pinctrl_8h.md#ae32030cca344741062790e2b2086fc67)#define UART0\_DSR\_GPIO3 ESP32\_PINMUX(3, ESP\_U0DSR\_IN, ESP\_NOSIG)

542

[ 543](esp32c2-pinctrl_8h.md#af6c5080bba4724865f41e2b328a2fd32)#define UART0\_DSR\_GPIO4 ESP32\_PINMUX(4, ESP\_U0DSR\_IN, ESP\_NOSIG)

544

[ 545](esp32c2-pinctrl_8h.md#ad5acc9d1afc1a99c1c467d02bafd9161)#define UART0\_DSR\_GPIO5 ESP32\_PINMUX(5, ESP\_U0DSR\_IN, ESP\_NOSIG)

546

[ 547](esp32c2-pinctrl_8h.md#a18ac817c1d151af1a50a0fa6f0b93dc9)#define UART0\_DSR\_GPIO6 ESP32\_PINMUX(6, ESP\_U0DSR\_IN, ESP\_NOSIG)

548

[ 549](esp32c2-pinctrl_8h.md#aebdfadfde65e8641849da76fbbb5cb55)#define UART0\_DSR\_GPIO7 ESP32\_PINMUX(7, ESP\_U0DSR\_IN, ESP\_NOSIG)

550

[ 551](esp32c2-pinctrl_8h.md#af60e959e09ec01b6493e154c61b9ca5f)#define UART0\_DSR\_GPIO8 ESP32\_PINMUX(8, ESP\_U0DSR\_IN, ESP\_NOSIG)

552

[ 553](esp32c2-pinctrl_8h.md#a98da23ffb4b891d310184f6624bbd583)#define UART0\_DSR\_GPIO9 ESP32\_PINMUX(9, ESP\_U0DSR\_IN, ESP\_NOSIG)

554

[ 555](esp32c2-pinctrl_8h.md#a4415f10db81c8f82cc4bd613d8f5c21c)#define UART0\_DSR\_GPIO10 ESP32\_PINMUX(10, ESP\_U0DSR\_IN, ESP\_NOSIG)

556

[ 557](esp32c2-pinctrl_8h.md#a1690ffd4da582ec078b4e431f6dcbe95)#define UART0\_DSR\_GPIO18 ESP32\_PINMUX(18, ESP\_U0DSR\_IN, ESP\_NOSIG)

558

[ 559](esp32c2-pinctrl_8h.md#a0330392cb7d65ecbe8714d4fe9089d95)#define UART0\_DSR\_GPIO19 ESP32\_PINMUX(19, ESP\_U0DSR\_IN, ESP\_NOSIG)

560

[ 561](esp32c2-pinctrl_8h.md#a63f141d429ea4622467a0e40a0c69a00)#define UART0\_DSR\_GPIO20 ESP32\_PINMUX(20, ESP\_U0DSR\_IN, ESP\_NOSIG)

562

563/\* UART0\_DTR \*/

[ 564](esp32c2-pinctrl_8h.md#af6a7fe5fb0d322a6613cb62ef6a058eb)#define UART0\_DTR\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_U0DTR\_OUT)

565

[ 566](esp32c2-pinctrl_8h.md#ab9c8e7bdac4f9ffa11f4c9b37b85da66)#define UART0\_DTR\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_U0DTR\_OUT)

567

[ 568](esp32c2-pinctrl_8h.md#a0ea0a9634fa15eb6d642ddf4c2c157d1)#define UART0\_DTR\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_U0DTR\_OUT)

569

[ 570](esp32c2-pinctrl_8h.md#ae372ea7092a1e4642fd89b3afe2ec7b3)#define UART0\_DTR\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_U0DTR\_OUT)

571

[ 572](esp32c2-pinctrl_8h.md#ad26ef5fc1b6ca36974a9d3a7ecf32124)#define UART0\_DTR\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_U0DTR\_OUT)

573

[ 574](esp32c2-pinctrl_8h.md#abdb82fb5856ab69f31c6126c279d2f40)#define UART0\_DTR\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_U0DTR\_OUT)

575

[ 576](esp32c2-pinctrl_8h.md#a998ab1f241d49bfdee9a87551b6b621c)#define UART0\_DTR\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_U0DTR\_OUT)

577

[ 578](esp32c2-pinctrl_8h.md#a01035d680926c4ac1bdaf633d8f57eab)#define UART0\_DTR\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_U0DTR\_OUT)

579

[ 580](esp32c2-pinctrl_8h.md#aad91b241f9729902bdd95b9ba51e77de)#define UART0\_DTR\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_U0DTR\_OUT)

581

[ 582](esp32c2-pinctrl_8h.md#a36e0e837429eb3af02400821ff3a3f2d)#define UART0\_DTR\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_U0DTR\_OUT)

583

[ 584](esp32c2-pinctrl_8h.md#a2791286c2692163f99a5796332291abc)#define UART0\_DTR\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_U0DTR\_OUT)

585

[ 586](esp32c2-pinctrl_8h.md#aabecce268afc0cef22926df980ce9892)#define UART0\_DTR\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_U0DTR\_OUT)

587

[ 588](esp32c2-pinctrl_8h.md#ab019615dd016bc1ea9c461631a5b8994)#define UART0\_DTR\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_U0DTR\_OUT)

589

[ 590](esp32c2-pinctrl_8h.md#a866281974453ebc34b345ee095ab6289)#define UART0\_DTR\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_U0DTR\_OUT)

591

592/\* UART0\_RTS \*/

[ 593](esp32c2-pinctrl_8h.md#a4149c886744f67a966c1fc339419d5c1)#define UART0\_RTS\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_U0RTS\_OUT)

594

[ 595](esp32c2-pinctrl_8h.md#a6b6c0c946d2f1db1106062e68111e06c)#define UART0\_RTS\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_U0RTS\_OUT)

596

[ 597](esp32c2-pinctrl_8h.md#a3e4900beadcc2f81b409f02b729a7c4f)#define UART0\_RTS\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_U0RTS\_OUT)

598

[ 599](esp32c2-pinctrl_8h.md#a14e8e255e07014c2edf941d85a1e26f8)#define UART0\_RTS\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_U0RTS\_OUT)

600

[ 601](esp32c2-pinctrl_8h.md#ae45f1b59042414cc799ca2dfe7e2f8f0)#define UART0\_RTS\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_U0RTS\_OUT)

602

[ 603](esp32c2-pinctrl_8h.md#a0ff2e59b702a2c4f12b10ea6c0572862)#define UART0\_RTS\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_U0RTS\_OUT)

604

[ 605](esp32c2-pinctrl_8h.md#aa306ccb7738c2511ed65b1a1cb9642b1)#define UART0\_RTS\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_U0RTS\_OUT)

606

[ 607](esp32c2-pinctrl_8h.md#a32dcac2e2f0ab5db2dbbc6790c255c2d)#define UART0\_RTS\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_U0RTS\_OUT)

608

[ 609](esp32c2-pinctrl_8h.md#a58fd119450f3b0043d0beb07b61194fa)#define UART0\_RTS\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_U0RTS\_OUT)

610

[ 611](esp32c2-pinctrl_8h.md#a6e4ac358669252ae76f530f318cbe9c3)#define UART0\_RTS\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_U0RTS\_OUT)

612

[ 613](esp32c2-pinctrl_8h.md#a53b2e8f3a0496f248f938c1a8646a621)#define UART0\_RTS\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_U0RTS\_OUT)

614

[ 615](esp32c2-pinctrl_8h.md#a9d2fbbf110a6b4f388d336957871c3ca)#define UART0\_RTS\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_U0RTS\_OUT)

616

[ 617](esp32c2-pinctrl_8h.md#a415ef9d06ef69252f5f36e1c951cf7f2)#define UART0\_RTS\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_U0RTS\_OUT)

618

[ 619](esp32c2-pinctrl_8h.md#aa611d2670fc7494861d8543e9a6d7367)#define UART0\_RTS\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_U0RTS\_OUT)

620

621/\* UART0\_RX \*/

[ 622](esp32c2-pinctrl_8h.md#adc8581dea1ba0fa89580bc73532cc90c)#define UART0\_RX\_GPIO0 ESP32\_PINMUX(0, ESP\_U0RXD\_IN, ESP\_NOSIG)

623

[ 624](esp32c2-pinctrl_8h.md#aa609a572a484c454f6019d35a6ffcafa)#define UART0\_RX\_GPIO1 ESP32\_PINMUX(1, ESP\_U0RXD\_IN, ESP\_NOSIG)

625

[ 626](esp32c2-pinctrl_8h.md#a920bd5cde491fb1e7ec61efc891dd1e6)#define UART0\_RX\_GPIO2 ESP32\_PINMUX(2, ESP\_U0RXD\_IN, ESP\_NOSIG)

627

[ 628](esp32c2-pinctrl_8h.md#a2143de6a300e449c8ecbd8bfd4a32398)#define UART0\_RX\_GPIO3 ESP32\_PINMUX(3, ESP\_U0RXD\_IN, ESP\_NOSIG)

629

[ 630](esp32c2-pinctrl_8h.md#a454e875bc388201a4bdff457ebf1482a)#define UART0\_RX\_GPIO4 ESP32\_PINMUX(4, ESP\_U0RXD\_IN, ESP\_NOSIG)

631

[ 632](esp32c2-pinctrl_8h.md#ab3edf8b07ba6abb12bb87855cf9541f8)#define UART0\_RX\_GPIO5 ESP32\_PINMUX(5, ESP\_U0RXD\_IN, ESP\_NOSIG)

633

[ 634](esp32c2-pinctrl_8h.md#a7399eb3ccdde9291249f93f2266170a3)#define UART0\_RX\_GPIO6 ESP32\_PINMUX(6, ESP\_U0RXD\_IN, ESP\_NOSIG)

635

[ 636](esp32c2-pinctrl_8h.md#ae2f7ed8ae2e681f2f94d569e8296364f)#define UART0\_RX\_GPIO7 ESP32\_PINMUX(7, ESP\_U0RXD\_IN, ESP\_NOSIG)

637

[ 638](esp32c2-pinctrl_8h.md#a5421ca66bca71a5c493a19f987d9285a)#define UART0\_RX\_GPIO8 ESP32\_PINMUX(8, ESP\_U0RXD\_IN, ESP\_NOSIG)

639

[ 640](esp32c2-pinctrl_8h.md#a647a985ee36904f693043e5ad5ef8dfc)#define UART0\_RX\_GPIO9 ESP32\_PINMUX(9, ESP\_U0RXD\_IN, ESP\_NOSIG)

641

[ 642](esp32c2-pinctrl_8h.md#a9715c0720089b5c743840494463150a2)#define UART0\_RX\_GPIO10 ESP32\_PINMUX(10, ESP\_U0RXD\_IN, ESP\_NOSIG)

643

[ 644](esp32c2-pinctrl_8h.md#a85c1e5f9d61e40a2425bd9d2629b4d9e)#define UART0\_RX\_GPIO18 ESP32\_PINMUX(18, ESP\_U0RXD\_IN, ESP\_NOSIG)

645

[ 646](esp32c2-pinctrl_8h.md#a01e6ba9e3967542176ebf9b4397208d7)#define UART0\_RX\_GPIO19 ESP32\_PINMUX(19, ESP\_U0RXD\_IN, ESP\_NOSIG)

647

[ 648](esp32c2-pinctrl_8h.md#ae4cdff60321a1f1d466af89248bc24d6)#define UART0\_RX\_GPIO20 ESP32\_PINMUX(20, ESP\_U0RXD\_IN, ESP\_NOSIG)

649

650/\* UART0\_TX \*/

[ 651](esp32c2-pinctrl_8h.md#aff05043e742723ca0cd96c10c5b000cf)#define UART0\_TX\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_U0TXD\_OUT)

652

[ 653](esp32c2-pinctrl_8h.md#ae5a40a4f65a2f3b073dd6bf3153df092)#define UART0\_TX\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_U0TXD\_OUT)

654

[ 655](esp32c2-pinctrl_8h.md#abbe81057ac3d97c75c70cbe1a0b1e564)#define UART0\_TX\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_U0TXD\_OUT)

656

[ 657](esp32c2-pinctrl_8h.md#a5a91c79b2b720834f77415a038c4a4ba)#define UART0\_TX\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_U0TXD\_OUT)

658

[ 659](esp32c2-pinctrl_8h.md#a9535a1b4081c3306a968c46527b9c3f0)#define UART0\_TX\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_U0TXD\_OUT)

660

[ 661](esp32c2-pinctrl_8h.md#a04eca9564bf40e83637f1de026bdfb9d)#define UART0\_TX\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_U0TXD\_OUT)

662

[ 663](esp32c2-pinctrl_8h.md#a776d5f1de9eaa68ca6b921bf6516bba9)#define UART0\_TX\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_U0TXD\_OUT)

664

[ 665](esp32c2-pinctrl_8h.md#a49b94c40b5711a46b4dfb3f09fe4a828)#define UART0\_TX\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_U0TXD\_OUT)

666

[ 667](esp32c2-pinctrl_8h.md#a9b53a67ea48099611d2458239adb693d)#define UART0\_TX\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_U0TXD\_OUT)

668

[ 669](esp32c2-pinctrl_8h.md#af20ce1b2dd9ef01350d4149716e1ab01)#define UART0\_TX\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_U0TXD\_OUT)

670

[ 671](esp32c2-pinctrl_8h.md#a3172de82eecde7a73c78df3cc253e676)#define UART0\_TX\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_U0TXD\_OUT)

672

[ 673](esp32c2-pinctrl_8h.md#a1152747594596f3decb20fe289cf8c54)#define UART0\_TX\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_U0TXD\_OUT)

674

[ 675](esp32c2-pinctrl_8h.md#afc2acae6a60ad5c0cd4c4fe50985c529)#define UART0\_TX\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_U0TXD\_OUT)

676

[ 677](esp32c2-pinctrl_8h.md#a957511a40629fa8de7ab699cd4cb67d0)#define UART0\_TX\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_U0TXD\_OUT)

678

679/\* UART1\_CTS \*/

[ 680](esp32c2-pinctrl_8h.md#a745e6454fecc1c692209c4152cc3ffb7)#define UART1\_CTS\_GPIO0 ESP32\_PINMUX(0, ESP\_U1CTS\_IN, ESP\_NOSIG)

681

[ 682](esp32c2-pinctrl_8h.md#a68d0227e7679705149a48a378d5ae467)#define UART1\_CTS\_GPIO1 ESP32\_PINMUX(1, ESP\_U1CTS\_IN, ESP\_NOSIG)

683

[ 684](esp32c2-pinctrl_8h.md#aef24f4fea2ac379ef540d9bfd000a4d1)#define UART1\_CTS\_GPIO2 ESP32\_PINMUX(2, ESP\_U1CTS\_IN, ESP\_NOSIG)

685

[ 686](esp32c2-pinctrl_8h.md#aa0f6b988b80849d099c4be33de1cd323)#define UART1\_CTS\_GPIO3 ESP32\_PINMUX(3, ESP\_U1CTS\_IN, ESP\_NOSIG)

687

[ 688](esp32c2-pinctrl_8h.md#a1677ce11c4e69a8034b0104190a46e31)#define UART1\_CTS\_GPIO4 ESP32\_PINMUX(4, ESP\_U1CTS\_IN, ESP\_NOSIG)

689

[ 690](esp32c2-pinctrl_8h.md#a3d9a1d371a16a0825122e141f4684889)#define UART1\_CTS\_GPIO5 ESP32\_PINMUX(5, ESP\_U1CTS\_IN, ESP\_NOSIG)

691

[ 692](esp32c2-pinctrl_8h.md#abb3641cbea40c49e414f583d08bd9cd8)#define UART1\_CTS\_GPIO6 ESP32\_PINMUX(6, ESP\_U1CTS\_IN, ESP\_NOSIG)

693

[ 694](esp32c2-pinctrl_8h.md#a945f5c7445c5f6e650761d7713d37ac1)#define UART1\_CTS\_GPIO7 ESP32\_PINMUX(7, ESP\_U1CTS\_IN, ESP\_NOSIG)

695

[ 696](esp32c2-pinctrl_8h.md#a3c9b6460d3d3e7155f3ac30a91a803c0)#define UART1\_CTS\_GPIO8 ESP32\_PINMUX(8, ESP\_U1CTS\_IN, ESP\_NOSIG)

697

[ 698](esp32c2-pinctrl_8h.md#a33b19f773d07a9dc0c9a8497142686f9)#define UART1\_CTS\_GPIO9 ESP32\_PINMUX(9, ESP\_U1CTS\_IN, ESP\_NOSIG)

699

[ 700](esp32c2-pinctrl_8h.md#aa56d94fb7027e22acf75588992fd5307)#define UART1\_CTS\_GPIO10 ESP32\_PINMUX(10, ESP\_U1CTS\_IN, ESP\_NOSIG)

701

[ 702](esp32c2-pinctrl_8h.md#a2685229d2389420882b22d96425d3aeb)#define UART1\_CTS\_GPIO18 ESP32\_PINMUX(18, ESP\_U1CTS\_IN, ESP\_NOSIG)

703

[ 704](esp32c2-pinctrl_8h.md#af82d83e6bd2c8a43665f7ceac1adcaa7)#define UART1\_CTS\_GPIO19 ESP32\_PINMUX(19, ESP\_U1CTS\_IN, ESP\_NOSIG)

705

[ 706](esp32c2-pinctrl_8h.md#aa75d7696f7bc82f3836f3aa50c81433f)#define UART1\_CTS\_GPIO20 ESP32\_PINMUX(20, ESP\_U1CTS\_IN, ESP\_NOSIG)

707

708/\* UART1\_DSR \*/

[ 709](esp32c2-pinctrl_8h.md#af40d1b9bd9e54ce72bae8a6796220930)#define UART1\_DSR\_GPIO0 ESP32\_PINMUX(0, ESP\_U1DSR\_IN, ESP\_NOSIG)

710

[ 711](esp32c2-pinctrl_8h.md#a3eb658226a32160fa5210476f398e02f)#define UART1\_DSR\_GPIO1 ESP32\_PINMUX(1, ESP\_U1DSR\_IN, ESP\_NOSIG)

712

[ 713](esp32c2-pinctrl_8h.md#a907841302c524b79defce55d7d1c9a14)#define UART1\_DSR\_GPIO2 ESP32\_PINMUX(2, ESP\_U1DSR\_IN, ESP\_NOSIG)

714

[ 715](esp32c2-pinctrl_8h.md#a8008769ad07ab7af6a21b28cefa7dad3)#define UART1\_DSR\_GPIO3 ESP32\_PINMUX(3, ESP\_U1DSR\_IN, ESP\_NOSIG)

716

[ 717](esp32c2-pinctrl_8h.md#a919dae1aab00ee526f4c71b984c697ac)#define UART1\_DSR\_GPIO4 ESP32\_PINMUX(4, ESP\_U1DSR\_IN, ESP\_NOSIG)

718

[ 719](esp32c2-pinctrl_8h.md#ad8da6686fa3c1f786cb35d10867b96dd)#define UART1\_DSR\_GPIO5 ESP32\_PINMUX(5, ESP\_U1DSR\_IN, ESP\_NOSIG)

720

[ 721](esp32c2-pinctrl_8h.md#ae0b4603e4bd4b6b8309c9c05fc26e01a)#define UART1\_DSR\_GPIO6 ESP32\_PINMUX(6, ESP\_U1DSR\_IN, ESP\_NOSIG)

722

[ 723](esp32c2-pinctrl_8h.md#a5a9d6c6f8d05246ef6802f5dbd080ad7)#define UART1\_DSR\_GPIO7 ESP32\_PINMUX(7, ESP\_U1DSR\_IN, ESP\_NOSIG)

724

[ 725](esp32c2-pinctrl_8h.md#a6681d7ad823d015afac5acf407e9c33e)#define UART1\_DSR\_GPIO8 ESP32\_PINMUX(8, ESP\_U1DSR\_IN, ESP\_NOSIG)

726

[ 727](esp32c2-pinctrl_8h.md#aadee5f3dde644714c234e79930ce1224)#define UART1\_DSR\_GPIO9 ESP32\_PINMUX(9, ESP\_U1DSR\_IN, ESP\_NOSIG)

728

[ 729](esp32c2-pinctrl_8h.md#ab5c107245a4007428fc057a6fd6d8b7a)#define UART1\_DSR\_GPIO10 ESP32\_PINMUX(10, ESP\_U1DSR\_IN, ESP\_NOSIG)

730

[ 731](esp32c2-pinctrl_8h.md#a54b1855e237a4a05a7eb3896217d4203)#define UART1\_DSR\_GPIO18 ESP32\_PINMUX(18, ESP\_U1DSR\_IN, ESP\_NOSIG)

732

[ 733](esp32c2-pinctrl_8h.md#ae36cdcf9db111bd760cc88374a7fe0cb)#define UART1\_DSR\_GPIO19 ESP32\_PINMUX(19, ESP\_U1DSR\_IN, ESP\_NOSIG)

734

[ 735](esp32c2-pinctrl_8h.md#ace6b88366628e309866498c7b79f2c18)#define UART1\_DSR\_GPIO20 ESP32\_PINMUX(20, ESP\_U1DSR\_IN, ESP\_NOSIG)

736

737/\* UART1\_DTR \*/

[ 738](esp32c2-pinctrl_8h.md#a77ea2b25c1995f179028d066ccaa4389)#define UART1\_DTR\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_U1DTR\_OUT)

739

[ 740](esp32c2-pinctrl_8h.md#a5ab7bcd072993bfd935351b29a351465)#define UART1\_DTR\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_U1DTR\_OUT)

741

[ 742](esp32c2-pinctrl_8h.md#ab48c1324193f5f426835969fc8140358)#define UART1\_DTR\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_U1DTR\_OUT)

743

[ 744](esp32c2-pinctrl_8h.md#a5d796c9eb30b7ef71cec5171b62d4c4b)#define UART1\_DTR\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_U1DTR\_OUT)

745

[ 746](esp32c2-pinctrl_8h.md#a27fce7d5ad3c4f78f28e924519b54db8)#define UART1\_DTR\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_U1DTR\_OUT)

747

[ 748](esp32c2-pinctrl_8h.md#a00e10ec5d5a878e21415865307cf8c4a)#define UART1\_DTR\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_U1DTR\_OUT)

749

[ 750](esp32c2-pinctrl_8h.md#ae0bb38b79228cd06f9864ba0f3e6363d)#define UART1\_DTR\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_U1DTR\_OUT)

751

[ 752](esp32c2-pinctrl_8h.md#a5a569fd6cd86bc62fe5f96df05586b1f)#define UART1\_DTR\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_U1DTR\_OUT)

753

[ 754](esp32c2-pinctrl_8h.md#a4b6b2d90fff73612e4d7112f7962fdc5)#define UART1\_DTR\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_U1DTR\_OUT)

755

[ 756](esp32c2-pinctrl_8h.md#a0c5305ad92fe6968118585263d300b00)#define UART1\_DTR\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_U1DTR\_OUT)

757

[ 758](esp32c2-pinctrl_8h.md#ac89fd8ede3590556fc06d053b438627e)#define UART1\_DTR\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_U1DTR\_OUT)

759

[ 760](esp32c2-pinctrl_8h.md#af8685d12eb09af080f5c6c87bb5f3e32)#define UART1\_DTR\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_U1DTR\_OUT)

761

[ 762](esp32c2-pinctrl_8h.md#a3837b876f01e1c7b1c1d7f2f7a26394b)#define UART1\_DTR\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_U1DTR\_OUT)

763

[ 764](esp32c2-pinctrl_8h.md#a3d948725ed4900cdca88bd5e0641c8f5)#define UART1\_DTR\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_U1DTR\_OUT)

765

766/\* UART1\_RTS \*/

[ 767](esp32c2-pinctrl_8h.md#a42a49d153c4ee494e4df90b6f63630fb)#define UART1\_RTS\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_U1RTS\_OUT)

768

[ 769](esp32c2-pinctrl_8h.md#acd04e089dd0270ac13111c52e8384058)#define UART1\_RTS\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_U1RTS\_OUT)

770

[ 771](esp32c2-pinctrl_8h.md#aa324d9dd11e48d51cdc116ce6c5973c6)#define UART1\_RTS\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_U1RTS\_OUT)

772

[ 773](esp32c2-pinctrl_8h.md#a6c722f1b8c5bc0d3fc784c359a777ba5)#define UART1\_RTS\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_U1RTS\_OUT)

774

[ 775](esp32c2-pinctrl_8h.md#a93713e5fe7695dd6cc0f882a8f271627)#define UART1\_RTS\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_U1RTS\_OUT)

776

[ 777](esp32c2-pinctrl_8h.md#a537f157284cf60d5e41477cceb643ffd)#define UART1\_RTS\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_U1RTS\_OUT)

778

[ 779](esp32c2-pinctrl_8h.md#aadf8722007011d6143e20fcf4d4fe6cf)#define UART1\_RTS\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_U1RTS\_OUT)

780

[ 781](esp32c2-pinctrl_8h.md#a310a960a9af52977865a569bbd31cfcb)#define UART1\_RTS\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_U1RTS\_OUT)

782

[ 783](esp32c2-pinctrl_8h.md#a0c27fc4d588e52c134388ea78fd01786)#define UART1\_RTS\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_U1RTS\_OUT)

784

[ 785](esp32c2-pinctrl_8h.md#a02ef90f5a900f989ec379a4dcb49932c)#define UART1\_RTS\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_U1RTS\_OUT)

786

[ 787](esp32c2-pinctrl_8h.md#aec6d3c526ec38b65ce900e303f7cab6f)#define UART1\_RTS\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_U1RTS\_OUT)

788

[ 789](esp32c2-pinctrl_8h.md#a645733155e93b5d335f66a10f4190b05)#define UART1\_RTS\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_U1RTS\_OUT)

790

[ 791](esp32c2-pinctrl_8h.md#abe9b3dd7a20a566c561a9a0e842e9d2b)#define UART1\_RTS\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_U1RTS\_OUT)

792

[ 793](esp32c2-pinctrl_8h.md#ac9f86f2c7bd9191569acecee1c9bcbbe)#define UART1\_RTS\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_U1RTS\_OUT)

794

795/\* UART1\_RX \*/

[ 796](esp32c2-pinctrl_8h.md#a4dc53d336219d2b3d85a8924b3baf5eb)#define UART1\_RX\_GPIO0 ESP32\_PINMUX(0, ESP\_U1RXD\_IN, ESP\_NOSIG)

797

[ 798](esp32c2-pinctrl_8h.md#a063f9e41dfb1f9927ebd20c7181be32b)#define UART1\_RX\_GPIO1 ESP32\_PINMUX(1, ESP\_U1RXD\_IN, ESP\_NOSIG)

799

[ 800](esp32c2-pinctrl_8h.md#af5b3cd62dba9235ca46c6b45ba948549)#define UART1\_RX\_GPIO2 ESP32\_PINMUX(2, ESP\_U1RXD\_IN, ESP\_NOSIG)

801

[ 802](esp32c2-pinctrl_8h.md#a34476e25e631e80f1729de818a9565a1)#define UART1\_RX\_GPIO3 ESP32\_PINMUX(3, ESP\_U1RXD\_IN, ESP\_NOSIG)

803

[ 804](esp32c2-pinctrl_8h.md#acf7723015d088f2766d531281ab9efce)#define UART1\_RX\_GPIO4 ESP32\_PINMUX(4, ESP\_U1RXD\_IN, ESP\_NOSIG)

805

[ 806](esp32c2-pinctrl_8h.md#aa2e6c180b81b0f8438e1834febd03758)#define UART1\_RX\_GPIO5 ESP32\_PINMUX(5, ESP\_U1RXD\_IN, ESP\_NOSIG)

807

[ 808](esp32c2-pinctrl_8h.md#a1297806ceda39cad011bee122ae39e54)#define UART1\_RX\_GPIO6 ESP32\_PINMUX(6, ESP\_U1RXD\_IN, ESP\_NOSIG)

809

[ 810](esp32c2-pinctrl_8h.md#ae9bb5dfe71454db0b79879885c4590c8)#define UART1\_RX\_GPIO7 ESP32\_PINMUX(7, ESP\_U1RXD\_IN, ESP\_NOSIG)

811

[ 812](esp32c2-pinctrl_8h.md#a49f4fb41f5655cc85bd82875c0059eff)#define UART1\_RX\_GPIO8 ESP32\_PINMUX(8, ESP\_U1RXD\_IN, ESP\_NOSIG)

813

[ 814](esp32c2-pinctrl_8h.md#a8a12bb7f48017331050fe6fe59bbc749)#define UART1\_RX\_GPIO9 ESP32\_PINMUX(9, ESP\_U1RXD\_IN, ESP\_NOSIG)

815

[ 816](esp32c2-pinctrl_8h.md#a9cd75442bf51f08304fa0bed8da92659)#define UART1\_RX\_GPIO10 ESP32\_PINMUX(10, ESP\_U1RXD\_IN, ESP\_NOSIG)

817

[ 818](esp32c2-pinctrl_8h.md#a8f9ca1e7bd966101faa29d9f874b6d1d)#define UART1\_RX\_GPIO18 ESP32\_PINMUX(18, ESP\_U1RXD\_IN, ESP\_NOSIG)

819

[ 820](esp32c2-pinctrl_8h.md#a0e29ce5dcbd120bb1cfe1783110d5107)#define UART1\_RX\_GPIO19 ESP32\_PINMUX(19, ESP\_U1RXD\_IN, ESP\_NOSIG)

821

[ 822](esp32c2-pinctrl_8h.md#a49c0cdab42b3a0e6bf541dc54ea8974c)#define UART1\_RX\_GPIO20 ESP32\_PINMUX(20, ESP\_U1RXD\_IN, ESP\_NOSIG)

823

824/\* UART1\_TX \*/

[ 825](esp32c2-pinctrl_8h.md#a91fab40b5577f654f262ae7fb5996bd6)#define UART1\_TX\_GPIO0 ESP32\_PINMUX(0, ESP\_NOSIG, ESP\_U1TXD\_OUT)

826

[ 827](esp32c2-pinctrl_8h.md#a4d50979c25d7e46fc3cfbe17fd4b6cbf)#define UART1\_TX\_GPIO1 ESP32\_PINMUX(1, ESP\_NOSIG, ESP\_U1TXD\_OUT)

828

[ 829](esp32c2-pinctrl_8h.md#a1d903cd4257e13e7af5fb8ade57a460e)#define UART1\_TX\_GPIO2 ESP32\_PINMUX(2, ESP\_NOSIG, ESP\_U1TXD\_OUT)

830

[ 831](esp32c2-pinctrl_8h.md#a2483197b366c4bc3f66878cba912afe4)#define UART1\_TX\_GPIO3 ESP32\_PINMUX(3, ESP\_NOSIG, ESP\_U1TXD\_OUT)

832

[ 833](esp32c2-pinctrl_8h.md#a60b316bba6b8ea04d3817d5f63bab651)#define UART1\_TX\_GPIO4 ESP32\_PINMUX(4, ESP\_NOSIG, ESP\_U1TXD\_OUT)

834

[ 835](esp32c2-pinctrl_8h.md#a35321c1c8113761f37ba03221f91c6ed)#define UART1\_TX\_GPIO5 ESP32\_PINMUX(5, ESP\_NOSIG, ESP\_U1TXD\_OUT)

836

[ 837](esp32c2-pinctrl_8h.md#adf1a64a59d2edc0a2dfcd4e55ad97132)#define UART1\_TX\_GPIO6 ESP32\_PINMUX(6, ESP\_NOSIG, ESP\_U1TXD\_OUT)

838

[ 839](esp32c2-pinctrl_8h.md#a28a771818fdf4387d99c0ebb06f561ae)#define UART1\_TX\_GPIO7 ESP32\_PINMUX(7, ESP\_NOSIG, ESP\_U1TXD\_OUT)

840

[ 841](esp32c2-pinctrl_8h.md#afe8d34abed6176230dc115b59c817b4b)#define UART1\_TX\_GPIO8 ESP32\_PINMUX(8, ESP\_NOSIG, ESP\_U1TXD\_OUT)

842

[ 843](esp32c2-pinctrl_8h.md#afb5ff7b7f160ad51f34b88e0d1eda9bc)#define UART1\_TX\_GPIO9 ESP32\_PINMUX(9, ESP\_NOSIG, ESP\_U1TXD\_OUT)

844

[ 845](esp32c2-pinctrl_8h.md#abe49dde94e36cbf1300808faf2f35571)#define UART1\_TX\_GPIO10 ESP32\_PINMUX(10, ESP\_NOSIG, ESP\_U1TXD\_OUT)

846

[ 847](esp32c2-pinctrl_8h.md#a684b42c80b2232acaed6315da33b35a9)#define UART1\_TX\_GPIO18 ESP32\_PINMUX(18, ESP\_NOSIG, ESP\_U1TXD\_OUT)

848

[ 849](esp32c2-pinctrl_8h.md#a610f49e85dcc9d6e4dade45782237cc7)#define UART1\_TX\_GPIO19 ESP32\_PINMUX(19, ESP\_NOSIG, ESP\_U1TXD\_OUT)

850

[ 851](esp32c2-pinctrl_8h.md#a34929cb9fe550899633e42431a5e9001)#define UART1\_TX\_GPIO20 ESP32\_PINMUX(20, ESP\_NOSIG, ESP\_U1TXD\_OUT)

852

853

854#endif /\* ZEPHYR\_INCLUDE\_DT\_BINDINGS\_PINCTRL\_ESP32C2\_PINCTRL\_H\_ \*/

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [dt-bindings](dir_2e4d86f9d28357ce2f99093c0845149c.md)
- [pinctrl](dir_2c6c4fbd167577104b7f1b7148586168.md)
- [esp32c2-pinctrl.h](esp32c2-pinctrl_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.2.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
